--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,23 @@
+# Created by https://www.gitignore.io/api/osx,jekyll,codekit
+# Edit at https://www.gitignore.io/?templates=osx,jekyll,codekit
+
+### CodeKit ###
+# General CodeKit files to ignore
+config.codekit
+config.codekit3
+/min
+
+### CodeKit Patch ###
+*/codekit-config.json
+.codekit-cache
+
+### Jekyll ###
+_site/
+.sass-cache/
+.jekyll-cache/
+.jekyll-metadata
+
+### OSX ###
 # General
 .DS_Store
 .AppleDouble
@@ -24,3 +44,5 @@ Icon
 Network Trash Folder
 Temporary Items
 .apdisk
+
+# End of https://www.gitignore.io/api/osx,jekyll,codekit
